[package]
name = "telnet_server"
version = "0.0.1"
edition = "2021"
authors = ["Laika Schmidt <36010519+its-laika@users.noreply.github.com>"]
description = "A bare telnet server provider"
readme = "README.md"
repository = "https://github.com/its-laika/telnet_server"
license = "MIT"
keywords = ["telnet", "telnet-server"]
exclude = [".github/", ".vscode/", "resources/", "telnet_docker/", ".gitignore"]

[lib]
name = "telnet_server"
path = "src/lib.rs"

[[bin]]
name = "telnet_server"
path = "src/bin/main.rs"

[dependencies]
