[package]
name = "telnet_server"
version = "0.0.1"
edition = "2021"
authors = ["Laika Schmidt <36010519+its-laika@users.noreply.github.com>"]
description = "A bare TELNET server provider"
readme = "README.md"
repository = "https://github.com/its-laika/telnet_server"
license = "MIT"
keywords = ["TELNET"]
exclude = [".github/", ".vscode/", "resources/", "telnet/", ".gitignore"]

[lib]
name = "telnet_server"
path = "src/lib.rs"

[[bin]]
name = "telnet_server"
path = "src/bin/main.rs"

[dependencies]
